Fix Spotbug errors detected
Fixes #2

Fix Spotbug errors in `hudson/plugins/vmanager/VmgrBuilds.java`, `src/main/java/org/jenkinsci/plugins/vmanager/InvokeExecutionTask.java`, and `src/main/java/org/jenkinsci/plugins/vmanager/LaunchHolder.java`.

* **Remove unread field**: Remove the unread field `pipelineBuild` in `VmgrBuilds.java`.
* **Specify StandardCharsets.UTF_8**: Specify `StandardCharsets.UTF_8` for `InputStreamReader` in `InvokeExecutionTask.java` and `LaunchHolder.java`.
* **Close BufferedReader streams**: Close the `BufferedReader` streams in `InvokeExecutionTask.java` and `LaunchHolder.java`.
* **Use Integer.valueOf(String)**: Use `Integer.valueOf(String)` instead of `new Integer(String)` in `LaunchHolder.java`.
* **Replace string concatenation in loops**: Replace string concatenation in loops with `StringBuilder` in `LaunchHolder.java`.
* **Add null checks**: Add null checks for `conn` and `reader` in `LaunchHolder.java`.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/gounthar/vmanager-plugin/issues/2?shareId=XXXX-XXXX-XXXX-XXXX).